# File-Manager-Meta

./: GEMINI.md  README.md  pyproject.toml
src/file_manager_meta/: cache_manager.py  cli.py  deduplicate.py  enums.py  hashes.py  metadata_updater.py  repair.py  report.py  sort.py
